--- a/src/main/webapp/WEB-INF/views/supply/(완)자산관리 - 비품 신청서 조회.html
+++ b/src/main/webapp/WEB-INF/views/supply/(완)자산관리 - 비품 신청서 조회.html
@@ -679,7 +679,7 @@
 
                   
                 <!-- 페이징바 , 클릭한 숫자에 클래스에 active 추가하기 -->
-                <div class="card-body">
+                <div class="card-body" style="justify-items: center;">
                   <div class="row">
                     <div class="col-lg-6">
                       
