--- a/src/main/webapp/WEB-INF/views/calendar/(완)일정관리 - 팀 일정.html
+++ b/src/main/webapp/WEB-INF/views/calendar/(완)일정관리 - 팀 일정.html
@@ -20,42 +20,195 @@
         background-color: white;
       }
 
+      .select2-selection__clear{ /* select 태그에 작게 x표시 뜨는거 안보이게 */
+        display:none;
+      }
+      .select2-search__field{ /* select 태그에 option 창에서 검색창 뜨는거 안보이게 */
+        display:none;
+      }
+
+      .fc-event-title-container{
+        color: rgb(45, 45, 45);
+      }
+
+
 
     </style>
 
-    
+
+    <!-- 풀캘린더 블로그 참고 popper, tippy 이게 필요하다는데 왜?
+    <script src="js/main.js"></script>
+    <script src="js/locales-all.min.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script> -->
+
+
+
+
+
+
     <!-- fullcalendar-->
 
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
     <script>
 
       
+
       document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
+      var calendar;  // global(전역) 변수로 calendar 선언
+      var calendarEl = document.getElementById('calendar');
         
         // Fullcalendar 옵션 설정 부분
         var calendar = new FullCalendar.Calendar(calendarEl, {
-          initialView: 'dayGridMonth',
-          selectable: true, // 달력 셀 부분 클릭 가능
+          initialView: 'dayGridMonth', // 로드 될때 캘린더 화면 기본 설정
+          selectable: true, // 달력 셀 부분 클릭, 드래그 선택 가능
           aspectRatio: 2.2,
           contentHeight: 850,
-          
-          select: function(){
+          dayMaxEvents: true, // 이벤트가 오버되면 높이 제한 (+ 몇 개식으로 표현)
+          editable: true, // default | false 이벤트 드래그 등의 편집여부를 설정함
+          selectMirror: true, 
+          textColor: 'black',
+
+          // 블로그
+          eventAdd: function(obj) { // 이벤트가 추가되면 발생하는 이벤트
+          console.log(obj);
+        },
+        eventChange: function(obj) { // 이벤트가 수정되면 발생하는 이벤트
+          console.log(obj);
+        },
+        eventRemove: function(obj){ // 이벤트가 삭제되면 발생하는 이벤트
+          console.log(obj);
+        },
+        select: function(arg) { // 캘린더에서 드래그로 이벤트를 생성할 수 있다.
+          var title = prompt('일정 입력');
+          if (title) {
+            calendar.addEvent({
+              title: title,
+              start: arg.start,
+              end: arg.end,
+              allDay: arg.allDay
+            })
+          }
+          calendar.unselect()
+        },
+
+        // 이벤트 
+        events: [
+
+          {
+            title: 'All Day Event',
+            start: '2024-11-01' // 마지막에는 , 없어야 동작한다
+          },
+          {
+            title: 'Long Event',
+            start: '2024-11-07',
+            end: '2021-07-10'
+          },
+          {
+            groupId: 999,
+            title: 'Repeating Event',
+            start: '2024-11-09T16:00:00'
+          },
+          {
+            groupId: 999,
+            title: 'Repeating Event',
+            start: '2024-11-16T16:00:00'
+          },
+          {
+            title: 'Conference',
+            start: '2024-11-11',
+            end: '2024-11-13'
+          },
+          {
+            title: 'Meeting',
+            start: '2024-11-12T10:30:00',
+            end: '2024-11-12T12:30:00'
+          },
+          {
+            title: 'Lunch',
+            start: '2024-11-12T12:00:00'
+          },
+          {
+            title: 'Meeting',
+            start: '2024-11-12T14:30:00'
+          },
+          {
+            title: 'Happy Hour',
+            start: '2024-11-12T17:30:00'
+          },
+          {
+            title: 'Dinner',
+            start: '2024-11-12T20:00:00'
+          },
+          {
+            title: 'Birthday Party',
+            start: '2024-11-13T07:00:00'
+          }
+        ],
+
+
+          select: function(evt){ // 날짜 셀 클릭시 실행되는 펑션
+            console.log(evt); // {startStr:'시작날짜', endStr:'끝날짜'} 가 들어있다. 즉, 셀 드래그로 선택시 첫 날짜는 startStr에, 마지막 날짜는 endStr에 담긴다.
+
             //alert('sss');
             //$('#modify').modal();
             
             // day 클릭시 모달창 뜨게하는 것 -> 모달 만들어서 바꿔줘야 함
             var dayclickmodal = new bootstrap.Modal(document.getElementById("dayclickmodal"));
+            // evt로 부터 도출한 날짜 값을 modal 영역 내의 날짜 input 요소에 출력 
+            $("#start").val(evt.startStr);  // 시작일을 'start' input에 입력 => String 값 반환됨
+
+             // 종료일에서 하루를 빼는 코드 (String -1 int 는 안되기때문에 Date로 형변환 후 처리하고 다시 String으로 만들어서 #end input에 담아야한다)
+            var endDate = new Date(evt.endStr);  // 종료일을 Date 객체로 변환
+            endDate.setDate(endDate.getDate() - 1);  // 하루를 빼기
+
+            var endDateString = endDate.toISOString().split('T')[0];  // YYYY-MM-DD 형식으로 변환
+            $("#end").val(endDateString);  // 종료일 -1일을 'end' input에 입력  
+
+
             dayclickmodal.show();
           }
         });
+
+            // 일정추가하는 모달창 이벤트
+          $("#saveChanges").on("click", function () {
+            var eventData = {
+              title: $("#title").val(),
+              start: $("#start").val(),
+              end: $("#end").val(),
+              color: $("#color").val(),
+            };
+            //빈값입력시 오류
+            if (
+              eventData.title == "" ||
+              eventData.start == "" ||
+              eventData.end == ""
+            ) {
+              alert("입력하지 않은 부분이 있습니다.");
+
+              //끝나는 날짜가 시작하는 날짜보다 값이 크면 안됨
+            } else if ($("#start").val() > $("#end").val()) {
+              alert("날짜를 바르게 입력하세요.");
+            } else {
+              // 이벤트 추가
+              calendar.addEvent(eventData);
+              $("#exampleModal").modal("hide");
+              $("#title").val("");
+              $("#start").val("");
+              $("#end").val("");
+              $("#color").val("");
+            }
+          });
+
         calendar.render();
 
       });
 
     </script>
 
-              <!-- fullcalendar cdn -->
+
+
+              <!-- fullcalendar cdn 프로그램 -->
 
               <script src="
               https://cdn.jsdelivr.net/npm/fullcalendar@5.11.5/main.min.js
@@ -125,6 +278,14 @@
 
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="../../assets/js/config.js"></script>
+
+
+
+
+    
+
+
+
   </head>
 
 
@@ -134,51 +295,90 @@
 
   <body>
 
+
+
+
+
+
+
     <!-- day 클릭시 모달 -->
     <div class="modal fade" id="dayclickmodal" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered1 modal-simple modal-add-new-cc">
-        <div class="modal-content">
+        <div class="modal-content" style="height: 550px;">
           <div class="modal-body">
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             <div class="text-center mb-6">
-              <h4 class="mb-2">해당 월 일 표시 부분</h4>
+              <h4 class="mb-2">일정</h4>
             </div>
-            <form id="dayclickmodalForm" class="row g-6" onsubmit="return false" >
-              <div class="col-12" style="min-height:100px;">
-                
-              </div>
+
               
-              <div class="col-12 text-center" style="height:160px; position:relative; bottom: -100px;">
+              <div class="col-12 text-center" style="height:160px;">
                 
-                <div class="input-group input-group-merge">
+                <label for="title" style="float:left;">일정명</label>
                   <input
-                    id="modalAddCard"
-                    name="modalAddCard"
+                    id="title"
+                    name="title"
                     class="form-control credit-card-mask"
                     type="text"
-                    aria-describedby="modalAddCard2" />
-                  <span class="input-group-text cursor-pointer p-1" id="modalAddCard2">
-                    <span class="card-type"></span>
-                  </span>
-                </div>
+                    aria-describedby="title2"
+                    style="margin-bottom:20px;" />
+                <label for="start" style="float:left;">시작일</label>
+                  <input
+                    id="start"
+                    name="start"
+                    class="form-control credit-card-mask"
+                    type="date"
+                    aria-describedby="title2"
+                    style="margin-bottom:20px;" />
+                <label for="end" style="float:left;">종료일</label>
+                  <input
+                    id="end"
+                    name="end"
+                    class="form-control credit-card-mask"
+                    type="date"
+                    aria-describedby="title2"
+                    style="margin-bottom:20px;" />
+    
 
-                <button type="submit" class="btn btn-primary me-3" style="margin-top:10px;">일정 추가</button>
+
+
+                <label for="color" style="float:left;">배경색</label>
+                  <select
+                    id="color"
+                    name="color"
+                    class="select2 form-select"
+                    data-allow-clear="true">
+                    <option class="optionHover" value="선택" disabled selected style="display: none;">선택</option>
+                    <option value="rgb(253, 191, 191)" class="optionHover" style="background-color: rgb(253, 191, 191); color:transparent;">연빨강</option>
+                    <option value="rgb(255, 201, 165)" class="optionHover" style="background-color: rgb(255, 201, 165);">연주황</option>
+                    <option value="rgb(255, 245, 191)" class="optionHover" style="background-color: rgb(255, 245, 191);">연노랑</option>
+                    <option value="rgb(207, 253, 226)" class="optionHover" style="background-color: rgb(207, 253, 226);">연초록</option>
+                    <option value="rgb(200, 247, 255)" class="optionHover" style="background-color: rgb(202, 240, 247);">연파랑</option>
+                    <option value="rgb(201, 206, 255)" class="optionHover" style="background-color: rgb(201, 206, 255);">연남색</option>
+                    <option value="rgb(238, 212, 255)" class="optionHover" style="background-color: rgb(238, 212, 255);">연보라</option>
+                  </select>
+                  
+
+
+
+                <button type="submit" class="btn btn-primary me-3" style="margin-top:30px;" id="saveChanges" data-bs-dismiss="modal">일정 추가</button>
                 <button
                   type="reset"
                   class="btn btn-label-secondary btn-reset"
                   data-bs-dismiss="modal"
-                  aria-label="Close"
-                  style="margin-top:10px;">
+                  aria-label="Close" 
+                  style="margin-top:30px;">
                   취소
                 </button>
               </div>
               </div>
-            </form>
           </div>
         </div>
       </div>
     </div>
     <!-- /day 클릭시 모달 -->
+
+
 
 
 
