--- a/src/main/webapp/WEB-INF/views/supply/(완)자산관리 - 비품정보버튼 클릭시(지원팀만보임).html
+++ b/src/main/webapp/WEB-INF/views/supply/(완)자산관리 - 비품정보버튼 클릭시(지원팀만보임).html
@@ -818,17 +818,12 @@
                     </tbody>
                     
                   </table>
-                  
-                </div>
-
-
-              </div>
-<!-- 페이징바 -->
+                  <!-- 페이징바 -->
 
 
                   
                 <!-- 페이징바 , 클릭한 숫자에 클래스에 active 추가하기 -->
-                <div class="card-body">
+                <div class="card-body" style="justify-items: center;">
                   <div class="row">
                     <div class="col-lg-6">
                       
@@ -882,6 +877,11 @@
                 </div>
 
                 <!-- /페이징바 -->
+                </div>
+
+
+              </div>
+                
 
 
 
